# server

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  set-local-lib-path.sh
.github/workflows/: ci.yml
src/: main.cpp  tui-register.cpp  tui-server.cpp
src/apiProvider/: AzureOpenAI.cpp  AzureOpenAI.h  Factory.cpp  Factory.h  IProvider.h  OpenAI.cpp  OpenAI.h  Option.h
src/application/: CallerId.h  RegistrationTlvType.h  ResourceVersionManager.h  SecureSession.cpp  SecureSession.h  Service.cpp  Service.h
src/cipher/: Aes256Gcm.cpp  Aes256Gcm.h  BigUint.h  BruteForceLimiter.cpp  BruteForceLimiter.h  ChaCha20Poly1305.cpp  ChaCha20Poly1305.h  Counter.h  EcdhePsk.cpp  EcdhePsk.h  Ed25519.cpp  Ed25519.h  FakeCredentialGenerator.cpp  FakeCredentialGenerator.h  HandshakeMessage.cpp  HandshakeMessage.h  IAuthenticationPeer.h  OpensslTypes.h  Spake2p.cpp  Spake2p.h  StepChecker.h  XChaCha20Poly1305.cpp  XChaCha20Poly1305.h
src/common/: Base64.cpp  Base64.h  Cache.h  StreamBatcher.h  TevInjectionQueue.h  Timestamp.cpp  Timestamp.h  Tlv.h  UniqueTypes.h  Utf8.cpp  Utf8.h  Utilities.cpp  Utilities.h  Uuid.h  WorkerThread.h
src/database/: Database.cpp  Database.h  Sqlite.cpp  Sqlite.h  VectorDatabase.cpp  VectorDatabase.h  VectorSearch.cpp  VectorSearch.h
src/network/: CurlTypes.cpp  CurlTypes.h  HttpClient.cpp  HttpClient.h  HttpStreamResponseParser.cpp  HttpStreamResponseParser.h  IConnection.h  IServer.h  LwsTypes.cpp  LwsTypes.h  WebSocketServer.cpp  WebSocketServer.h
src/rpc/: RpcServer.h
src/schema/: AzureOpenAI.h  Chat.h  ChatHistory.h  IServer.h  Rpc.h
src/schema/src/: generate.js  package.json  tsconfig.json
src/schema/src/local/: AzureOpenAI.ts
src/schema/src/schema/: AzureOpenAI.ts  Chat.ts  ChatHistory.ts
test/: .gitignore  CMakeLists.txt  TestAes256Gcm.cpp  TestApiProvider.cpp  TestApiProviderOption.cpp  TestBase64.cpp  TestBigUint.cpp  TestBruteForceLimiter.cpp  TestCache.cpp  TestChaCha20Poly1305.cpp  TestChaCha20Poly1305Interactive.cpp  TestCounter.cpp  TestCryptoKdfHkdfSha256.cpp  TestDatabase.cpp  TestEcdhePsk.cpp  TestEcdhePskInteractive.cpp  TestEd25519.cpp  TestFakeCredentialGenerator.cpp  TestHttpClient.cpp  TestHttpStreamResponseParser.cpp  TestRegister.cpp  TestResourceVersionManager.cpp  TestRpcServer.cpp  TestSecureSession.cpp  TestService.cpp  TestSpake2p.cpp  TestSpake2pInteractive.cpp  TestSqlite.cpp  TestStreamBatcher.cpp  TestTevInjectionQueue.cpp  TestTlv.cpp  TestTuiServer.cpp  TestUtf8.cpp  TestUuid.cpp  TestVectorDatabase.cpp  TestVectorSearch.cpp  TestWebSocketServer.cpp  TestWorkerThread.cpp  TestXChaCha20Poly1305.cpp  Utility.h
test/ServiceClient/: ChatBot.js  Main.js  TUIClient.js  TestMetadata.js  TestUser.js  package.json
test/WebSocketClient/: Main.js
test/data/: TestHistory.json
